css: agregada clase para convertir a mayúsculas

--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -68,6 +68,10 @@ q:after {
   border-radius: 10px;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .inline-list-comma {
   list-style-type: none;
   display: inline;
