--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -157,6 +157,44 @@ dl.inline-wrapped dt {
   cursor: pointer;
 }
 
+[class^=icon-]::before {
+  display: inline-block;
+  content: "";
+  width: 36px;
+  height: 36px;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  margin-right: 0.6em;
+  background-position-x: 4px;
+}
+
+.icon-phone::before {
+  background-image: url(../images/iconos/celular.svg);
+}
+
+.icon-time::before {
+  background-image: url(../images/iconos/horario.svg);
+}
+
+.icon-address::before {
+  background-image: url(../images/iconos/globa.svg);
+}
+
+.icon-email::before {
+  background-image: url(../images/iconos/email.svg);
+  background-position-x: 0;
+}
+
+.icon-social-facebook::before {
+  background-image: url(../images/iconos/facebook.svg);
+  background-position-x: 0;
+}
+
+.icon-social-instagram::before {
+  background-image: url(../images/iconos/instagram.svg);
+  background-position-x: 0;
+}
+
 @media screen and (min-width: 600px) {
   .alignwide {
     margin-left: -80px;
@@ -259,23 +297,6 @@ dl.inline-wrapped dt {
   text-align: left;
   margin: 0 0 40px 0;
   padding: 0px;
-}
-
-@media screen and (max-width: 400px) {
-  body.home .ppb_wrapper .ppb_gestion_municipal .box {
-    width: 150px !important;
-    margin: 0.3em !important;
-    float: none;
-    display: inline-block;
-    vertical-align: middle;
-  }
-  body.home .ppb_wrapper .ppb_gestion_municipal .box h3 {
-    font-size: 0.9em !important;
-  }
-  body.home .ppb_wrapper .ppb_gestion_municipal .box .image {
-    width: 100%;
-    max-width: 100px;
-  }
 }
 
 .wrapper_max_width {
@@ -1437,10 +1458,6 @@ table.dataTable thead .sorting_asc:after {
   line-height: 2em !important;
 }
 
-div.ppb_module_tramites + div.ppb_module_tramites {
-  margin-top: -60px;
-}
-
 body.page-municipio #page_caption.hasbg {
   background-position-x: center;
 }
@@ -1869,37 +1886,6 @@ body.page-municipio table {
 }
 .mrg-block-header .contact-list dd {
   margin: 0.7em 0;
-}
-.mrg-block-header .contact-list [class^=icon-]::before {
-  display: inline-block;
-  content: "";
-  width: 36px;
-  height: 36px;
-  background-repeat: no-repeat;
-  vertical-align: middle;
-  margin-right: 0.6em;
-  background-position-x: 4px;
-}
-.mrg-block-header .contact-list .icon-phone::before {
-  background-image: url(../images/iconos/celular.svg);
-}
-.mrg-block-header .contact-list .icon-time::before {
-  background-image: url(../images/iconos/horario.svg);
-}
-.mrg-block-header .contact-list .icon-address::before {
-  background-image: url(../images/iconos/globa.svg);
-}
-.mrg-block-header .contact-list .icon-email::before {
-  background-image: url(../images/iconos/email.svg);
-  background-position-x: 0;
-}
-.mrg-block-header .contact-list .icon-social-facebook::before {
-  background-image: url(../images/iconos/facebook.svg);
-  background-position-x: 0;
-}
-.mrg-block-header .contact-list .icon-social-instagram::before {
-  background-image: url(../images/iconos/instagram.svg);
-  background-position-x: 0;
 }
 .mrg-block-header .wp-block-column:first-child {
   min-width: 64%;
@@ -2400,8 +2386,7 @@ body.home .slider_wrapper,
 .blog-latest,
 .indice_anclas,
 .hamburger,
-.footer,
-body.page .ppb_module_cta_imagen_texto_boton {
+.footer {
     display: none !important;
   }
 
@@ -2425,36 +2410,6 @@ body.page .ppb_module_cta_imagen_texto_boton {
   .page-breadcrumb .the-modified-date {
     font-size: 14px;
     text-align: left;
-  }
-
-  body.home .ppb_secciones_destacadas .page_content_wrapper .box {
-    width: 200px;
-  }
-  body.home .ppb_secciones_destacadas .page_content_wrapper h3 {
-    font-size: 20px;
-  }
-  body.home .ppb_descubre .page_content_wrapper .title,
-body.home .ppb_gestion_municipal .page_content_wrapper .title {
-    font-size: 40px;
-  }
-  body.home .ppb_descubre .page_content_wrapper .box {
-    width: 100%;
-    height: auto;
-  }
-  body.home .ppb_descubre .page_content_wrapper .image {
-    float: left;
-    margin-right: 1em;
-  }
-  body.home .ppb_descubre .page_content_wrapper h3 {
-    display: block;
-    margin: 0;
-    text-align: left;
-  }
-  body.home .ppb_gestion_municipal .page_content_wrapper .box .image {
-    width: 80px;
-  }
-  body.home .ppb_gestion_municipal .page_content_wrapper .box h3 {
-    font-size: 16px;
   }
 
   body.page .bilder_modul.fixed {
@@ -2500,10 +2455,6 @@ body.home .ppb_gestion_municipal .page_content_wrapper .title {
   body.page .titular_bajada_c1_c2 .col-md-6 {
     float: none;
     width: 100%;
-  }
-  body.page .ppb_module_cta_imagen_texto_boton .page_content_wrapper .col-md-12 .content h3 {
-    font-size: 20px;
-    line-height: 30px;
   }
   body.page .ppb_module_centros-salud ul {
     flex-direction: column;
