--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -1000,8 +1000,9 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
   font-size: 1.1em;
   line-height: 1.5em;
 }
-.people-list-wrapper.avatar-as-square .wp-block-gallery.columns-2 .blocks-gallery-item figure {
+.people-list-wrapper.avatar-as-square .wp-block-gallery .blocks-gallery-item figure {
   align-self: center;
+  align-items: center;
 }
 
 #page_content_wrapper .inner .sidebar_content .people-list-wrapper.avatar-as-square .image img {
@@ -1018,12 +1019,6 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
 }
 .nnice-cta .row > .col {
   display: flex;
-}
-.nnice-cta .box-image {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 10px 0 0 10px;
 }
 .nnice-cta .text {
   width: 50%;
@@ -1061,27 +1056,6 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
     width: 100%;
   }
 }
-.nnice-cta.vertical-cta .box-image, .nnice-cta.vertical-cta .box-cta {
-  width: 100%;
-}
-.nnice-cta.vertical-cta .box-image {
-  border-radius: 10px 10px 0 0;
-  height: 250px;
-  /* hardcoded for salud > asperger */
-}
-@media screen and (max-width: 400px) {
-  .nnice-cta.vertical-cta .box-image {
-    height: 150px;
-    /* hardcoded for salud > asperger */
-  }
-}
-.nnice-cta.vertical-cta .box-cta {
-  background-image: none;
-  padding-bottom: 1em;
-  border-radius: 0 0 10px 10px;
-  text-align: center;
-  word-break: break-word;
-}
 .nnice-cta.nnice-cta-form {
   border-radius: 1em;
   overflow: hidden;
@@ -1102,17 +1076,6 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
 .nnice-cta.nnice-cta-form .content {
   background-color: transparent;
   color: #fff;
-}
-.nnice-cta.nnice-cta-form .box-image {
-  background-position: center top;
-  background-size: cover;
-  min-height: 300px;
-  height: 100%;
-}
-@media screen and (max-width: 400px) {
-  .nnice-cta.nnice-cta-form .box-image {
-    display: none;
-  }
 }
 .nnice-cta.nnice-cta-form form.form-subscribe {
   border-radius: 0 1em 1em 0;
@@ -1281,9 +1244,6 @@ body.page-espacio-tecnologico fieldset.expand-sub-items legend .arrow.arrow-left
 body.page-espacio-tecnologico fieldset.expand-sub-items > p {
   margin-left: 1em;
 }
-body.page-espacio-tecnologico .form-edlt-info-wrapper .box-image {
-  background-size: auto 1800px !important;
-}
 body.page-espacio-tecnologico .form-edlt-info-wrapper #mauticform_edltinformacioncursos #mauticform_edltinformacioncursos_nombre,
 body.page-espacio-tecnologico .form-edlt-info-wrapper #mauticform_edltinformacioncursos #mauticform_edltinformacioncursos_apellido {
   width: 100%;
@@ -1390,36 +1350,6 @@ table.dataTable thead .sorting_asc:after {
 
 #map_puntos_carga .leaflet-popup-content dd {
   margin-left: 0.3em;
-}
-
-.big-buttons-icons-wrapper {
-  text-align: center;
-  display: flex;
-  align-items: end;
-  justify-content: center;
-}
-.big-buttons-icons-wrapper .btn {
-  width: 240px;
-  margin: 0.5em 2em;
-  background-color: #e7e7e7;
-  border-radius: 10px;
-  padding: 0.8em;
-  text-align: center;
-  color: #002855;
-  height: 160px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.big-buttons-icons-wrapper .btn img {
-  max-width: 120px !important;
-  margin: 0 auto;
-}
-.big-buttons-icons-wrapper .btn .label {
-  margin: 0.9em 0 0 !important;
-  text-align: center !important;
-  font-size: 0.6em !important;
-  font-weight: bold !important;
 }
 
 .mrg-downloads-table-formularios .ssfa-crumbs {
@@ -2412,50 +2342,6 @@ body.home .slider_wrapper,
     text-align: left;
   }
 
-  body.page .bilder_modul.fixed {
-    padding-bottom: 100px;
-  }
-  body.page .bilder_modul .col-md {
-    width: 100%;
-  }
-  body.page .bilder_modul .col-md-8 {
-    margin-bottom: 2em;
-  }
-  body.page .bilder_modul .page_content_wrapper .col-md-8 .content h2 {
-    font-size: 40px;
-    line-height: 58px;
-  }
-  body.page .bilder_modul .page_content_wrapper .col-md-8 .content p {
-    font-size: 22px;
-  }
-  body.page .bilder_modul .page_content_wrapper .col-md-8 .content ul li {
-    font-size: 20px;
-  }
-  body.page .bilder_modul .page_content_wrapper .col-md-4 .content ul {
-    column-count: 2;
-  }
-  body.page .bilder_modul .page_content_wrapper .col-md-4 .content ul li {
-    margin-right: 30px;
-    font-weight: normal;
-    font-size: 20px;
-  }
-  body.page .bilder_modul .page_content_wrapper .col-md-4 .content ul li img {
-    max-width: 30px;
-  }
-  body.page .titular_bajada_c1_c2 .page_content_wrapper {
-    max-width: none;
-  }
-  body.page .titular_bajada_c1_c2 .page_content_wrapper .col-md-12 .content h2 {
-    font-size: 40px;
-  }
-  body.page .titular_bajada_c1_c2 .page_content_wrapper .col-md-6 .content img {
-    float: none;
-    max-width: 400px;
-  }
-  body.page .titular_bajada_c1_c2 .col-md-6 {
-    float: none;
-    width: 100%;
-  }
   body.page .ppb_module_centros-salud ul {
     flex-direction: column;
   }
@@ -2469,10 +2355,6 @@ body.home .slider_wrapper,
   }
   body.page .ppb_module_centros-salud ul .centro-salud .featured-image img {
     max-width: 400px;
-  }
-
-  body.page-empleo #dejanos-tu-cv .box-cta {
-    display: none;
   }
 }
 
